extended tests